try to compress via String and bytes